--- a/about.html
+++ b/about.html
@@ -28,7 +28,10 @@
       </nav>
     </header>
     <main>
+      <div class="overskrift">
       <h1>About us</h1>
+      </div>
+      <div class="top-wave"></div>
       <div class="grid_1-1_2">
         <div class="about_us">
           <div class="about_us-style">
@@ -56,6 +59,7 @@
         </div>
       </div>
       </div>
+      <div class="bottom-wave"></div>
     </main>
     <footer>
       <div class="footer">
