--- a/about.html
+++ b/about.html
@@ -44,7 +44,9 @@
             </p>
           </div>
         </div>
-        <div class="video_interview"></div>
+        <div class="video_interview">
+          <video controls src=""></video>
+        </div>
         <div class="billede_shop">
           <img src="../img/gnocchi_pink.webp" alt="pasta" />
         </div>
