--- a/products.html
+++ b/products.html
@@ -22,13 +22,15 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="products.html">Selection</a></li>
-          <li><a href="about.html">About us</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <h1>Our pasta</h1>
+      <div class="overskrift">
+        <h1>Our pasta</h1>
+      </div>
       <div class="tekst_produkt">
         <p>Since our products are artisanal, we might not have all the options every day. DM us on Instagram or call us for info on availability. You are also more than welcome to stop by the shop, to see what our daily specials are.</p>
         <h2>Prices/100g</h2>
