--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
           </div>
         </div>
         <div class="video_interview">
-          <video controls src=""></video>
+          <video controls src="https://eappelby.com/kea/05_indhold/video/LaFresca.mp4"></video>
         </div>
         <div class="billede_shop">
           <img src="../img/gnocchi_pink.webp" alt="pasta" />
