--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
         <div class="kontakt">
           <form name="kontakt" netlify>
             <div class="form-felt required">
-              <label for="navn">Navn</label>
+              <label for="navn">Name</label>
               <input type="text" id="navn" name="navn" placeholder="Sofie" />
             </div>
             <div class="form-felt required">
@@ -43,7 +43,7 @@
               <input type="email" id="email" name="email" placeholder="sofiehansen@gmail.com" />
             </div>
             <div class="form-felt required">
-              <label for="andet">Skriv en besked her...</label>
+              <label for="andet">Write a message here...</label>
               <textarea name="besked" id="besked" cols="30" rows="10"></textarea>
             </div>
             <button type="submit">Indsend</button>
