--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
               <label for="andet">Write a message here...</label>
               <textarea name="besked" id="besked" cols="30" rows="10"></textarea>
             </div>
-            <button type="submit">Indsend</button>
+            <button type="submit">Submit</button>
           </form>
         </div>
 
